--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.8",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "expo-constants": "~15.4.5",
     "@expo/vector-icons": "^14.0.0",
-    "react-native-paper": "4.9.2"
+    "expo": "~50.0.8",
+    "expo-constants": "~15.4.5",
+    "expo-status-bar": "~1.11.1",
+    "firebase": "^10.12.0",
+    "react": "^18.2.0",
+    "react-native": "^0.73.4",
+    "react-native-paper": "4.9.2",
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
